@@ -7,7 +7,7 @@
 
 <body>
 
-<h2><a name="foreach">Pathconvert</a></h2>
+<h2><a name="pathconvert">Pathconvert</a></h2>
 <h3>Description</h3>
 <p>Converts a nested <code>&lt;path&gt;</code> or reference to a Path,
 FileSet, DirSet, or FileList into a path
@@ -40,10 +40,7 @@ drive letters to Unix paths, and vice-versa.</p>
         <code>pathsep</code> and <code>dirsep</code>
         according to the specified target architecture.
     </td>
-    <td valign="top" align="center">
-       Yes, unless <code>pathsep</code> and/or
-       <code>dirsep</code> are specified.
-    </td>
+    <td valign="top" align="center">No</td>
   </tr>
   <tr>
     <td valign="top">dirsep</td>
@@ -185,7 +182,7 @@ list of files.
 </p>
 
 <hr>
-<p align="center">Copyright &copy; 2001-2004 The Apache Software Foundation.
+<p align="center">Copyright &copy; 2001-2005 The Apache Software Foundation.
 All rights Reserved.</p>
 </body>
 </html>
