@@ -1,5 +1,5 @@
 /*
- * Copyright 2004 The Apache Software Foundation.
+ * Copyright 2004-2005 The Apache Software Foundation.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -41,6 +41,10 @@ public class PathConvertTest extends BuildFileTest {
 
     public void testMapper() {
         test("testmapper");
+    }
+
+    public void testNoTargetOs() {
+        executeTarget("testnotargetos");
     }
 
     private void test(String target) {
